[package]
name = "simple_search"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simple_google = "0.1.1"
spider = "2.37.139"
futures = "0.3"
spider_transformations = "2.37.109"

[[bin]]
name = "simple_search"
path = "src/main.rs"

[lib]
name = "simple_search"
path = "src/lib.rs"
