[package]
name = "search_for_llms"
version = "0.1.0"
edition = "2021"
description = "A search tool suitable for LLMs, with structured and cleaned search results, written in Rust"
license = "MIT"
repository = "https://github.com/LeeeSe/search_for_llms"
homepage = "https://github.com/LeeeSe/search_for_llms"
documentation = "https://github.com/LeeeSe/search_for_llms#readme"
keywords = ["search", "web", "scraping", "google", "llm"]
categories = ["command-line-utilities", "web-programming"]
authors = ["LeeeSe"]

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simple_google = "0.1.1"
spider = "2.37.139"
futures = "0.3"
spider_transformations = "2.37.109"

[[bin]]
name = "search_for_llms"
path = "src/main.rs"

[lib]
name = "search_for_llms"
path = "src/lib.rs"
